Fix working week

Summary:
There's a feature in scheduled transactions which allow them to move backwards/forwards in case a scheduled entry falls on a non-processing day, e.g. a weekend.  However, I've noticed that that seems to have stopped working in 5.x/master. This change brings back this functionality.

BUG: 393168

Reviewers: #kmymoney, christiand, tbaumgart

Reviewed By: #kmymoney, christiand, tbaumgart

Subscribers: tbaumgart, christiand

Tags: #kmymoney

Differential Revision: https://phabricator.kde.org/D12412